--- a/doc/thesis/results.tex
+++ b/doc/thesis/results.tex
@@ -28,6 +28,9 @@ For Simulated Data, Full Volume:
 \item Activation Map based on a single region with high $\epsilon$, compared with linear
 \end{enumerate}
 
+Final parameter distribution among active regions.
+Q-Q plots?
+
 \section{FMRI Data}
 ....
 
