--- a/doc/thesis/particlefilters.tex
+++ b/doc/thesis/particlefilters.tex
@@ -283,7 +283,7 @@ is relatively simple.
 \end{algorithmic}
 \end{algorithm}
 
-\subsection{Resampling}
+\section{Resampling}
 \label{sec:Particle Filter Resampling}
 As a consequence 
 of the wide prior distribution (required for a proper discretization of a continuous
@@ -333,13 +333,14 @@ still limited to the original particles, the number of \emph{unique} particles c
 This effect, dubbed "particle impoverishment" can result in excessive quantization
 errors in the final distribution. However, there is a solution. Instead of sampling from the
 discrete distribution, a smoothing kernel is applied, and particles are drawn from
-that distribution. Because the distribution is continuous, particle impoverishment
-cannot occur. The easiest way to sample from the continous distribution is to break the 
+that distribution. Because it is continuous, particle impoverishment
+cannot occur. The easiest way to sample from the continuous distribution is to break the 
 re-sampling down into two steps. After calculating an estimate of the scale of the original
-distribution, \autoref{alg:Resampling} is performed. Next, a distribution is generated
-based on the original distributions, although it should have a somewhat smaller variance.
-Finally, for each particle in the resampled distribution, a sample is drawn from the smoothing 
-distribution and added to the particle.  The process of the selection will be defined as:
+distribution, algorithm \autoref{alg:Resampling} is performed. Next, a distribution is generated
+based on the variance of the original distributions.
+Finally, for each particle in the discretely re-sampled distribution, a sample is drawn from 
+the smoothing 
+distribution and added to the particle.  The process regularization is defined as:
 
 \begin{equation}
 x_i = x_i + h\sigma \epsilon
@@ -351,7 +352,7 @@ and $\epsilon$ is drawn from the chosen kernel. \cite{Musso2001a} goes into
 significant 
 depth and proves the optimality of the Epanechnikov Kernel for reducing 
 MSE between the original and resampled distributions. However, \cite{Musso2001a}
-also espouses the usefullness of the Gaussian Kernel, due to the ease
+also espouses the usefulness of the Gaussian Kernel, due to the ease
 drawing samples from it, which for this work was more important.
 
 \begin{algorithm}
@@ -359,66 +360,92 @@ drawing samples from it, which for this work was more important.
 \begin{algorithmic}
 \STATE Calculate Covariance, $C$, of empirical distribution, $\hat{x}$
 \STATE Find $D$ such that $DD^T = C$
-\STATE Resample $\hat{x}$ using \autoref{alg:Resampling}
+\STATE Resample $\hat{x}$ using algorithm \autoref{alg:Resampling}
 \FOR{$0 < i < N_p$}
     \STATE Draw $\epsilon$ from the standard normal, same dimensionality as $X$
     \STATE $x^i = x^i + hD\epsilon$
 \ENDFOR
 \end{algorithmic}
-\label{alg:Resampling}
+\label{alg:RegResampling}
 \end{algorithm}
+
+It has been proposed by \cite{Hurzeler1998} that if the underlying 
+distribution is non-Gaussian, then using the original bandwidth will over-smooth. 
+In reality, over smoothing
+will only become an issue if re-sampling is performed over and over. Thus
+if
+resampling is performed at every step then this could certainly caused problems.
+If the distribution is over-smoothed then the algorithm may not converge as rapidly;
+however, because the bandwidth is still based on particle variance, which decays as 
+particles are ruled out, it is still able to converge. In fact, over-smoothing is preferable
+to under smoothing, since over-smoothing simply slows convergence while 
+under-smoothing could result in false negatives.
+At the same time, as the number of dimensions in the state vector 
+increases, the standard deviation based approximation becomes less effective
+ (\cite{Arulampalam2002a}). Because of the high dimensionality of the BOLD model,
+and limited measurements, it is helpful to have a broader bandwidth to explore the distribution. 
+
+\begin{algorithm}
+\caption{Regularized Particle Filter}
+\begin{algorithmic}
+\STATE Initialize Particles:
+\FOR{$i$ : each of $N_p$ particles }
+    \STATE $x^i_0  \sim \alpha(X)$
+    \STATE $w^i_0 = \frac{1}{N_p}$
+\ENDFOR
+\FOR{$k$ : each measurement}
+    \FOR{$i$ : each particle }
+        \STATE $x^i_k = x^i_{k-1} + \int_{t-1}^t f(x(\tau), u(\tau)) d\tau $
+        \STATE $w^i_k = w^i_{k-1}P(y_k | x_k)$
+    \ENDFOR
+
+    \STATE Calculate $N_{eff}$ with \autoref{eq:neff}
+    \IF{$N_{eff} < N_R$ (recommend $N_R = min(50, .1N_p)$ )}
+        \STATE Resample using algorithm \autoref{alg:RegResampling}
+    \ENDIF
+\ENDFOR
+
+\STATE At $t + \Delta t$, $t \in T$, $P(x(t+\Delta t)) \approx 
+\sum_{i=1}^{N_p} w_i(t)\delta\left(x - (x_i(t) + \int_t^{t+\Delta t} f(x(\tau), u(\tau)) d\tau) \right)$
+ \end{algorithmic}
+ \end{algorithm}
+
+Nevertheless, because 
+of the potentially wide smoothing factor applied by regularized resampling, performing this
+step at every measurement would allow particles a great deal of mobility. This mobility is
+the opposite of convergence, which is why regularized resampling should only be done when
+$N_{eff}$ drops (say less than 50). Other than the periodic regularized
+resampling then, the regularized particle filter is nearly identical to the basic sampling
+importance sampling filter (SIS). 
 
 Thus, with regularized resampling, it is possible to prevent both
 particle degeneracy as well as particle impoverishment. An additional
 bonus is that as the particle filter converges, the density of particles
 in the area of the solution goes up. This has a similar effect to 
 simulated annealing where, as the algorithm approaches the end, the
-random steps get smaller and smaller. On the down side,
-if for some reason the real solution was not covered by the new support 
-generated by the resampling algorithm the algorithm could 
+random steps get smaller and smaller. There is a potential risk when
+resampling. If for some reason the solution is not covered by the 
+new support the algorithm will fail to converge properly.
 
-\subsection{Weighting Function}
-Because $P(y_k | x(T))$, what I will call the weighting function,
-is based on an unknown distribution, it is necessary to decide on a function
-that will approximate $P(y_k | x(T))$. Obviously the function, $\omega(y_k, f(x(t))$
-needs to be centered at zero and have a scale comparable to the signal levels.
-Obviously if the actual noise present in $y_k$ were to be known, then that would
-be the best distribution for $\Omega$. In that case, particles that fell
-far out on that distribution would be statistically impossible representations
-of the system, and it would be completely reasonable to throw such particles away.
-While a Gaussian function is the natural choice, because this distribution
-and weight are unknown we wanted to try distributions
-with wider tails, so that outliers don't completely destroy particle's weights
-(and thus convergence proceeds more slowly).
+The ultimate effect of this regularized resampling is a convergence similar to simulated annealing
+or a genetic algorithm. Versions of $x$ that are "fit" (give good measurements) spawn more children 
+nearby which allow for more accurate estimation near points of high likelihood. 
+As the variance of the estimated
+$x$'s decrease, the radius in which children are spawned also decreases. Eventually the radius
+will approach the width of the underlying uncertainty, $\nu_x$ and $\nu_y$.
 
-Another natural choice might be one of the robust estimator weight functions, for
-example the Huber or bi-square. For the purpose of this work we will stick
-with long tailed distributions, however it is worth noting that long tails
-may not be the optimal choice in all, or even this situation. The justification
-for long tailed distributions is that we believe the noise to be long tailed,
-and the variance of the noise is not well known.
-
-Therefore, we tried three weighting functions based on three distributions: Gaussian, 
-Laplace and the Cauchy. The standard deviation of the distribution is extremely
-important to the convergence of particle filter. A standard deviation that is 
-too large will not allow the distribution to converge in any reasonable number of 
-measurements. A standard deviation below the standard deviation of the noise 
-will cause the algorithm to throw out perfectly acceptable particles. 
-The weighting function ultimately will shape the output distribution, $P[y]$, into that
-distribution, however the distribution of $x$ will still approach a reasonable
-estimate of its true distribution. Even an overly wide weighting function, will
-allow the Gaussian Mixture estimate of $X$ to converge to the correct location 
-parameters of the "real" posterior distribution, though the scale parameters may 
-be overly large.
-
-A reasonable method of setting the standard deviation of $\Omega$ may be by 
-taking a small sample from "resting" data and using the sample standard deviation.
-Since this is the first attempt at using particle filters for modeling the 
-BOLD model, in this work we set the standard deviation manually at <weight standard dev>,
-because it gives a more consistency and control. Of course this could be taken
-further, by testing the sample data against a set of stock distributions
-and choosing the best fit. This of course depends on having enough samples
-to make a reasonable inference, which may not always exist. 
+\section{Weighting Function}
+Because the distribution of $\nu_y$ in \autoref{eq:measass} is unknown,
+it is necessary to choose a distribution for this. This distribution,
+is extremely important because $\nu_y \sim P(y_k | x(T))$, which is used
+for updating weights. Ideally this weighting function would exactly 
+match the measurement error in
+the output. It is logical to assume this error is centered at zero and 
+has a scale comparable to the signal levels.
+While a Gaussian function is the traditional choice, I wanted to try other
+distributions as well, given the unpredictable nature of the noise present in FMRI.
+The choice of this function will be discussed further in \autoref{sec:Methods
+Weighting Function}.
 
 \section{Simple, Nonlinear Example}
 A typical half wave rectifier takes a AC voltage circuit and removes
@@ -463,15 +490,10 @@ $C$ is the capacitance, $R$ is the load resistance and $v_y$ is the output volta
 \label{fig:HalfWaveIO}
 \end{figure}
 
-Although rectifiers are typically thought
-of as receiving an AC circuit 60 Hz, we will ignore such specifics and 
-assume the voltage across the output of the transformer is simply a scalar
-multiple of the input voltage.  As discussed in the \autoref{sec:Particle Filter Model}
+For this example it will be assumed that the transformer simply scales
+the input by a constant factor, $G$. As discussed in the \autoref{sec:Particle Filter Model}
 any variable with uncertainty must be part of the state variable. Therefore
-the state variable will be: $X(t) = \{G, v_t, C, R_m, v_y\}$. Of course,
-$u(t)$ cannot be allowed to be a square wave in such a system, since that
-such a signal would never get across the transformer and regardless it
-would necessitate an unrealistic infinite current across the capacitor.
+the state variable is defined as: $X(t) = \{G, v_t, C, R_m, v_y\}$. 
 The state equations would then be 
 
 \begin{equation}
@@ -485,22 +507,20 @@ To run the particle filter is relatively easy then, since there exists
 a recursive definition of the dynamic state variable, $v_y$. To start
 with, an initial distribution must be assumed and while at first a 
 Gaussian seems like a good idea, all the static state variables are strictly
-positive and thus not well suited to the Gaussian. In this case then,
-it would be wise to start with a Gamma distribution, and just be wary of
-any standard deviation that gets larger than the prior mean. We will define
-the gamma distribution as follows:
+positive and thus not well suited to the Gaussian. Thus, instead the prior 
+will start with a Gamma distribution. The gamma is defined as follows:
 
 \begin{equation}
 X \sim Gamma(k, \theta) \rightarrow f(x) = x^{k-1}\frac{e^{-x/\theta}}{\theta^k\Gamma(k)}
 \end{equation}
 
 where $\Gamma$ is the gamma function.
-The in some ways the margin for error is decided by the weighting function, which
-here will define as $W(V_y, v_{yi})$, where $V_y$ is the actual measurement, $v_y$ is the 
+The margin for error is decided by the weighting function, which
+will be defined as $W(V_y, v_{yi})$, where $V_y$ is the actual measurement, $v_y$ is the 
 estimate based on all the particles, and 
-$v_{yi}$ is the estimate by a particular (i$^{\text{th}}$) particle. The choice of this function is difficult,
-and although the Gaussian is typically used, we found the exponential helpful
-in dealing with particle deprivation.  The algorithm will then look like the following,
+$v_{yi}$ is the estimate by a particular ($i^{th}$) particle. The choice of this function is difficult,
+and although the Gaussian is typically used, in practice I found the exponential helpful
+in preventing particle deprivation. The algorithm is then,
 
 \begin{algorithmic}
 \STATE Initialize $N_p$ Particles:
@@ -528,69 +548,8 @@ changes, the response of each particle to that input will result in different
 outputs. Particles that have a $v_{yi}$ near $V_y$ will be weighted higher,
 and others farther away will be weighted lower. As the particle filter
 runs, weights will compound resulting in a distribution that asymptotically
-approaches the true joint distribution of the $X(t)$.  Of course, as we
-mentioned in \autoref{sec:Particle Filter Resampling}, particles weighted zero do not significantly
+approaches the true joint distribution of the $X(t)$.  Of course, as I
+mentioned in \autoref{sec:Particle Filter Resampling}, particles weighted 
+zero do not significantly
 contribute to the empirical distribution, so re-sampling may be necessary.
-If the noise is assumed to be Gaussian then it is possible to further optimize. 
-Thus we let $h$ be defines as:
-\begin{eqnarray}
-h = [N_s8c^{-1}_{n_x}(n_x + 4)(2\sqrt{\pi})^{n_x}]^{\frac{1}{n_x +4}}
-\end{eqnarray}
-and although it is very possible the underlying noise is non-gaussian, the Gaussian
-may work, but sub-optimally. It has been proposed that (Monte Carlo Approximations for
-General State-Space Models, markus Hurzeler and Hans R. Kunsch) if the underlying 
-distribution is non-Gaussian, then using this bandwidth will oversmooth. 
-In reality over smoothing
-should not be too great an issue because the smoothing is only being applied to find new
-particles. If the distribution is over smoothed then the algorithm may not converge as rapidly;
-however, because the bandwidth is still based on particle variance, which will decay as 
-particles are ruled out, it is still able to converge. In fact over smoothing is preferrable
-to under smoothing, since the latter would result in false negatives, but the previous only
-results in a slower decay of the variance. 
-At the same time, as $n_x$, the number of dimensions in
-$x$, goes to infinity, the standard deviation based approximation becomes less effective
-(cite a Tutorial on Particle Filters for on-line non-linear non-gaussian bayesian
-tracking, sanjeev arulampalam, simon maskell, neil gordon...).  Because of the high dimensionality of our system,
-and limited measurements, it is helpful to have a broader bandwidth to explore the distribution. 
-Nevertheless, because 
-of the potentially wide smoothing factor applied by regularized resampling, performing this
-step at every measurement would allow particles a great deal of mobility. This mobility is
-the enemy of convergence, which is why regularized resampling should only be done when
-$\hat{N}_{eff}$ drops very low (say less than 50). Other than the periodic regularized
-resampling then, the regularized particle filter is nearly identical to the basic sampling
-importance sampling filter (SIS). 
-
- \begin{algorithmic}
-\STATE Initialize $N_p$ Particles: 
-        $\{x_i(0),w_i(0) : x_i(0) \sim \alpha(x), w_i(0) = \frac{1}{N_p}, i \in \{1, 2, ... , N_p\} \}$
-\STATE $T$ = \{Set of Measurement Times\}
-\FOR{$t$ in $T$}
-    \FOR{$i$ in $N_p$}
-        \STATE $x_i(t) = x_i(t-1) + \int_{t-1}^t f(x(\tau), u(\tau)) d\tau $
-        \STATE $w_i(t) = w_i(t-1)P(y(t) | x(t))$
-    \ENDFOR
-
-    \STATE Calculate $N_{eff}$ with \autoref{eq:neff}
-    \IF{$N_{eff} < N_R$ (recommend $N_R = min(50, .1N_p)$ )}
-        \STATE Calculate empirical $\sigma$ 
-        \STATE $h = [N_s8c^{-1}_{n_x}(n_x + 4)(2\sqrt{\pi})^{n_x}]^{\frac{1}{n_x +4}}$
-        \STATE Redraw particles using (stratified) basic resampling
-        \FOR{$i$ in $N_p$}
-            \STATE Draw $\epsilon \sim K$
-            \STATE $x_i = x_i + h \sigma \epsilon$
-        \ENDFOR
-    \ENDIF
-\ENDFOR
-
-\STATE At $t + \Delta t$, $t \in T$, $P(x(t+\Delta t)) \approx 
-\sum_{i=1}^{N_p} w_i(t)\delta\left(x - (x_i(t) + \int_t^{t+\Delta t} f(x(\tau), u(\tau)) d\tau) \right)$
-
- \end{algorithmic}
-
-The ultimate effect of this regularized resampling is a convergence similar to simulated annealing
-or a genetic algorithm. Versions of $x$ that are "fit" (give good measurements) spawn more children 
-nearby which allow for more accurate estimation near points of high likelihood. 
-As the variance of the estimated
-$x$'s decrease, the radius in which children are spawned also decreases. Eventually the radius
-will approach the width of the underlying uncertainty, $\nu_x$ and $\nu_y$.
 
